jenkins commit message

--- a/icerikler/anasayfa.html
+++ b/icerikler/anasayfa.html
@@ -2,7 +2,6 @@
 <html>
     <body>
         <h1>Baslik</h1>
-        <h2>Baslik 2</h2>
-        <h3>Baslik 3</h3>
+        <h2>Jenkins commit</h2>
     </body>
 </html>
